# Ethical-Question-Generator_Server

./: CMakeLists.txt
Definitions/: structs.h
Source/: Auth_Handler.cpp  CGPT_Handler.cpp  Database_Handler.cpp  HTTP_Handler.cpp  JSON_Handler.cpp  Server.cpp
Source/Backend/: Auth_Handler.cpp  Database_Handler.cpp  File_Handler.cpp  HTTP_Handler.cpp  JSON_Handler.cpp
Source/Frontend/: .html  script.js
